--- a/src/components/about-tab.scss
+++ b/src/components/about-tab.scss
@@ -7,7 +7,6 @@
   width: $location-tab-width;
   height: $location-tab-height;
   padding: $tab-padding;
-  height: 800px; // extend beyond enclaosing for scroll
 
   h2 {
     font-size: 1.2em;
