--- a/src/components/vars.scss
+++ b/src/components/vars.scss
@@ -11,15 +11,15 @@ $text-color: #222;
 $edge-padding: 4px;
 
 $location-tab-width: 340px;
-$location-tab-height: 630px;
+$location-tab-height: 485px;
 
-$sim-tab-width: 662px;
+$sim-tab-width: 660px;
 $sim-tab-height: $location-tab-height;
 
 $about-tab-width: $location-tab-width;
 $about-tab-height: $location-tab-height;
 
-$tab-padding: 15px;
+$tab-padding: 10px;
 $input-height: 32px;
 $input-margin: 0 0 12px 8px;
 $input-border-radius: 3px;
